--- a/src/components/Bins/Bins.css
+++ b/src/components/Bins/Bins.css
@@ -79,6 +79,17 @@
     border-radius: 3px;
 }
 
+.save_button {
+    height: 60px;
+    width: 170px;
+    margin: 20px;
+    font-size: 26px;
+    font-family: 'Open Sans', sans-serif;
+    background: #40F99B;
+    border: none;
+    border-radius: 3px;
+}
+
 .delete_button {
     height: 60px;
     width: 170px;
