--- a/src/components/Shelves/Shelf.css
+++ b/src/components/Shelves/Shelf.css
@@ -1,13 +1,13 @@
 .bin_link_container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 600px;
+    align-items: flex-start;
+    height: 70px;
     margin-top: 10px;
+    margin-left: 338px;
 }
 
-.bin_link_container p {
+.bin {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,9 +15,25 @@
     width: 500px;
     background: #ED6B5A;
     border-radius: 3px;
-    margin: 10px 500px 10px 10px;
+    margin: 10px 10px 10px 10px;
     font-family: 'Open Sans', sans-serif;
     font-size: 30px;
     color: white;
     text-decoration: underline #ED6B5A;
 }
+
+.add-inventory-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 500px;
+    background: #FFB8AF;
+    border-radius: 3px;
+    margin: 10px 10px 10px 10px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    color: white;
+    text-decoration: underline #FFB8AF;
+}
+
