--- a/src/components/Bins/Bins.css
+++ b/src/components/Bins/Bins.css
@@ -8,6 +8,34 @@
     margin-left: 170px;
 }
 
+.bin_input_name_noedit {
+    display: flex;
+    height: 60px;
+    width: 532px;
+    align-items: center;
+    border: solid 1px #AB2A19;
+    border-radius: 3px;
+    font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 10px;
+    padding-left: 10px;
+    
+}
+
+.bin_input_price_noedit {
+    display: flex;
+    height: 60px;
+    width: 500px;
+    align-items: center;
+    border: solid 1px #AB2A19;
+    border-radius: 3px;
+    font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
+    margin-left: 10px;
+    padding-left: 42px;
+    
+}
+
 .bin_input_name {
     height: 60px;
     width: 532px;
@@ -45,9 +73,40 @@
     justify-content: flex-start;
 }
 
+.input_bars_container_noedit {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 570px;
+    justify-content: flex-start;
+}
+
 .input_bars_container p {
     margin-left: 20px;
     margin-bottom: 3px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.input_bars_container_noedit p {
+    margin-left: 20px;
+    margin-bottom: -5px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.bin_input_name_noedit_header {
+    margin-left: 20px;
+    margin-bottom: 4px;
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.bin_input_price_noedit_header {
+    margin-left: 20px;
+    margin-bottom: 4px;
+    margin-top: 20px;
     font-weight: bold;
     font-size: 18px;
 }
@@ -61,7 +120,23 @@
     margin-top: -40px;
 }
 
+.input_bars_container_noedit span {
+    position: relative;
+    left: 35px;
+    top: 52px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    margin-top: -40px;
+}
+
 .bin_button_container {
+    display: flex;
+    justify-content: space-between;
+    width: 540px;
+
+}
+
+.bin_button_container_noedit {
     display: flex;
     justify-content: space-between;
     width: 540px;
